--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: weather_open_meteo_client
 description: weather_package
 version: 0.0.1
-homepage:https://github.com/petyaas/weather_open_meteo_client
+homepage: https://github.com/petyaas/weather_open_meteo_client
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -14,11 +14,12 @@ dependencies:
   build_runner: ^2.3.2
   json_annotation: ^4.7.0
 
+
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^2.0.0
   json_serializable: any
+  test: ^1.16.4
+  mocktail: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
